finalização dos exercicios

--- a/loop_while/explicação/exercicio/ex7.html
+++ b/loop_while/explicação/exercicio/ex7.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <script>
-        
+         let contador = 1;
+        let resultado;
+
+        while (contador <= 100) {
+            resultado = contador % 2;
+
+            if (resultado === 1){
+                console.log(contador);
+            } 
+            contador++;
+        }
     </script>
 </body>
 </html>
