--- a/loop_while/explicação/exercicio/ex8.html
+++ b/loop_while/explicação/exercicio/ex8.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <script>
-        
+        let number = 2;
+        let result = 0
+
+        while ( number <= 5) {
+            result = result + number * number;
+            number++;
+        }
+        console.log(result)
+
     </script>
 </body>
 </html>
