correção dos exercios e  add do exercicio9

--- a/loop_while/explicação/exercicio/ex1.html
+++ b/loop_while/explicação/exercicio/ex1.html
@@ -7,13 +7,12 @@
 </head>
 <body>
     <script>
-        let numero = parseInt(prompt('digite um numero inteiro'))
+        let numero = parseInt(prompt('digite um numero inteiro'));
         const limite = numero + 100
 
-    while (resultado <= limite){
-        console.log(resultado)
-        
-        resultado++;
+    while (numero <= limite){
+        console.log(numero)
+        numero++;
 
 }
     </script>
