--- a/loop_for/exemplo.html
+++ b/loop_for/exemplo.html
@@ -21,7 +21,7 @@
         console.log(personagens)
         personagens.splice(2,1)
         // slipe remove algum item do vetor, para remover deve usar o numero do item e quantos quer remover
-        // no caso o 2 é o numero do item que tirou e o 1 é a quantidade
+        // no caso o 2 é o numero do item que tirou e o 1 é a quantidade de numeros que vai remover a partir do numero
         console.log(personagens)
 </script>
 </body>
